# LangGraph-Agent-LLMOps-Deployment

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  logging_config.py  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml
agents/: graph_builder.py  routes.py
backend/: Dockerfile  README.md  app.py  logging_config.py  pyproject.toml  requirements.txt
backend/agents/: agent_loader.py  graph_builder.py  routes.py  tools.py
backend/ingestion/: __init__.py  delete_qdrant_index.py  index_builder.py  qdrant_utils.py  routes.py  sources.py  upload_handler.py
backend/tests/: test_agent_routes.py  test_graph_builder.py  test_ingestion.py  test_tools.py  test_upload_and_create.py
backend/utils/: config.py  delete_qdrant_index.py  logger.py  qdrant_utils.py
frontend/: README.md  app.py
ingestion/: index_builder.py
